Import of REHSACK/SQL-Statement-1.28 from CPAN.
gitpan-cpan-distribution: SQL-Statement
gitpan-cpan-version:      1.28
gitpan-cpan-path:         REHSACK/SQL-Statement-1.28.tar.gz
gitpan-cpan-author:       REHSACK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -26,6 +26,7 @@ Version 1.28
   DBD::File::Roadmap).
 * POD spelling fixes provided by H.Merijn Brand and Pod::Spell::CommonMistakes
   (thanks Tux)
+* POD grammar fixes and reasonable sentences created by Martin Evans 
 
 [Things that may break your code]
 * SQL::Statement 1.28 is expected not to work proper in combination with
