Import of REHSACK/SQL-Statement-1.30 from CPAN.
gitpan-cpan-distribution: SQL-Statement
gitpan-cpan-version:      1.30
gitpan-cpan-path:         REHSACK/SQL-Statement-1.30.tar.gz
gitpan-cpan-author:       REHSACK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Changes log for Perl extension SQL::Statement
 
+Version 1.30, released August 1st, 2010
+----------------------------------------------
+
+[Bug fixes]
+* remove blib directory from distfile
+
 Version 1.29, released August 1st, 2010
 ----------------------------------------------
 
