--- a/Changes
+++ b/Changes
@@ -1,6 +1,28 @@
 Changes log for Perl extension SQL::Statement
 
-Version 1.31, released August 
+Version 1.32
+----------------------------------------------
+
+[Bug fixes]
+* Fixed invalid check for escaped single quotes
+* Fixed unpermitted modification of array source for table creation
+  (CREATE TABLE AS IMPORT(?),[[..],[..]])
+* Fixing alias used in ORDER BY (RT#61384, thanks jvm)
+* Fixing ORDER BY behavior for multiple sort columns
+  (slower, but guaranteed correct)
+
+[Improvements]
+* renamed fetch-method into fetch_row (keep fetch() as alias) and
+  add a fetch_rows() to fetch all rows at once
+* Different accessors for direction of ORDER BY clause query part
+  and it's boolean equivalent "desc" (0 or 1, respectively)
+
+[Misc]
+* Bump requirement of DBI to 1.616
+* Add a lot of Pure-Perl DBD's as build dependency for testing
+* switch for fully external DBD tests from DBD::XBase to DBD::SQLite
+
+Version 1.31, released August 16th, 2010
 ----------------------------------------------
 
 [Bug fixes]
@@ -294,10 +316,10 @@ Version 1.16_04, released 4 January, 2009
 * Fixed Bugs:
   * 14217	Does not correctly handle SQL statements with comments
   * 15686	Join syntax is case-sensitive, and common columns in natural
-            joins are "ambiguous" [patch]
+                joins are "ambiguous" [patch]
   * 13080	Cannot update a field based on its previous value
   * 26058	functions on computed columns aliased to the underlying column
-            name are not called
+                name are not called
 
 Version 1.16_03, released 1 January, 2009
 ------------------------------------------
