--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Changes log for Perl extension SQL::Statement
 
-Version 1.32
+Version 1.32, released January 19th, 2011
 ----------------------------------------------
 
 [Bug fixes]
