Import of REHSACK/SQL-Statement-1.402_001 from CPAN.
gitpan-cpan-distribution: SQL-Statement
gitpan-cpan-version:      1.402_001
gitpan-cpan-path:         REHSACK/SQL-Statement-1.402_001.tar.gz
gitpan-cpan-author:       REHSACK
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Changes log for Perl extension SQL::Statement
 
+Version 1.402, released xx xx, xxxx
+-------------------------------------------------
+
+[Bug fixes]
+* fix leaking reference to open tables outside SQL::Statement::execute
+
 Version 1.401, released October 29, 2012
 -------------------------------------------------
 
