Import of REHSACK/SQL-Statement-1.402 from CPAN.
gitpan-cpan-distribution: SQL-Statement
gitpan-cpan-version:      1.402
gitpan-cpan-path:         REHSACK/SQL-Statement-1.402.tar.gz
gitpan-cpan-author:       REHSACK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Changes log for Perl extension SQL::Statement
 
-Version 1.402, released xx xx, xxxx
+Version 1.402, released December 19, 2012
 -------------------------------------------------
 
 [Misc]
