--- a/lib/SQL/Statement/Roadmap.pod
+++ b/lib/SQL/Statement/Roadmap.pod
@@ -64,8 +64,8 @@ basic components is required.
 =head3 SQL::Parser rewrite
 
 The SQL::Parser needs to be modified to be able to use a
-L<http://en.wikipedia.org/wiki/Backus_Naur_Form|Backus Naur
-Form>. This would allow users and developers to rely on many different
+L<Backus Naur Form|http://en.wikipedia.org/wiki/Backus_Naur_Form>.
+This would allow users and developers to rely on many different
 SQL dialects.  This will allow better extensibility from a feature
 point of view without losing ANSI SQL compatibility.
 
@@ -97,9 +97,14 @@ The easiest way to implement this would be to create a
 L<SQL::Statement::RAM|SQL::Statement::RAM::Table> on C<BEGIN TRANSACTION>
 and write the entire table back on C<COMMIT> or discard on C<ROLLBACK>.
 
-Better performance could be acheived when the implementation allows to
-memorize the single modification and apply them at C<COMMIT>. This needs
-more discussion.
+Better performance could be achieved in cases where the implementation is
+enabled to memorize pending modifications and apply them at C<COMMIT>.
+On the other hand there are already
+L<capabilities|SQL::Eval/"Method interface of SQL::Eval::Table"> to
+improve some operations, which might create confusion in case of
+transactions.
+
+This needs more discussion.
 
 =head4 ALTER TABLE
 
